syntax = "proto3";

package interconnect;

message StateUpdate {
  repeated ComponentUpdates component_updates = 2;
}

message ComponentUpdates {
  uint32 keyframe_id = 1;
  uint32 component_type_id = 2;
  oneof update_content {
    KeyFrameContent key_frame_content = 3;
    DeltaFrameContent delta_frame_content = 4;
  }
}

message KeyFrameContent {
  repeated KeyComponentState key_component_states = 1;
}

message KeyComponentState {
  uint64 entity_id = 1;
  // TODO(acmcarther): Implement component authority
  //bool authoritative = 2;
  bytes data = 3;
}

message DeltaFrameContent {
  repeated DeltaComponentState delta_component_states = 1;
}

message DeltaComponentState {
  uint64 entity_id = 1;
  // TODO(acmcarther): Implement component authority
  //bool authoritative = 2;
  bool removed = 3;
  oneof change_payload {
    bytes component_add_data = 4;
    bytes component_change_data = 5;
  }
}

message StateUpdateResponse {
  repeated ComponentAck component_acks = 1;
}

message ComponentAck {
  uint32 keyframe_id = 1;
  uint32 component_type_id = 2;
}
